--- a/client/src/components/admin/AdminPanel.css
+++ b/client/src/components/admin/AdminPanel.css
@@ -38,10 +38,10 @@
 }
 
 .category h2 {
-  border-bottom: 2px solid #4CAF50;
+  border-bottom: 2px solid #fc5b05;
   padding-bottom: 5px;
   margin-bottom: 15px;
-  color: #4CAF50;
+  color: #fa4f06;
   text-align: center; /* הוספתי את זה */
 }
 
