--- a/client/src/pages/courses/Courses.css
+++ b/client/src/pages/courses/Courses.css
@@ -165,14 +165,25 @@
 }
 
 .full-label {
+  display: inline-block;
   background-color: red;
   color: white;
   padding: 5px 10px;
   border-radius: 5px;
   font-weight: bold;
-  display: inline-block;
-  margin-left: 15px; /* מרווח לצד שמאל */
+  margin-bottom: 10px;
 }
+
+.started-label {
+  display: inline-block;
+  background-color: red;
+  color: white;
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
 
 
 
